--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "auth0-react-sdk-sample",
-  "version": "0.1.0",
+  "name": "react-auth0-login",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-
+    "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "helmet": "^3.23.3",
+    "helmet": "^4.6.0",
     "highlight.js": "^10.1.1",
-    "jwks-rsa": "^1.8.1",
+    "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
-    "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
